Fixed the ui of password
It is not aligning

--- a/FrontEnd/public/css/login.css
+++ b/FrontEnd/public/css/login.css
@@ -13,8 +13,9 @@
   }
   
   .login-title {
-    color: #7D0000;
+    color: white;
     font-size: 2rem;
+    margin-left: 5%;
     margin-bottom: 20px;
   }
   
@@ -46,6 +47,7 @@
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-left: 2%;
   }
   
   .login-button:hover {
@@ -74,10 +76,9 @@
     color: white;
     font-size: 1.2rem;
   }
-  .password-container {
+  .password-container-login {
     position: relative;
-    right: 6%;
-    width: 1%; /* Use 100% width for the container or adjust as needed */
+    width: 100%; /* Use 100% width for the container or adjust as needed */
   }
   
   .login-input {
@@ -93,9 +94,10 @@
   .toggle-password {
     position: absolute;
     right: 15px; /* Adjust to align the icon properly */
-    top: 50%;
+    top: 44%;
     transform: translateY(-50%);
     cursor: pointer;
+    left: 98%;
   }
   
   
