--- a/FrontEnd/public/css/signup.css
+++ b/FrontEnd/public/css/signup.css
@@ -113,10 +113,13 @@
 .password-container {
     display: flex; /* Use flexbox layout */
     align-items: center; /* Center items vertically */
-    padding-left: 6%; /* Adjust padding */
-    width: 110%; /* Adjust width to be slightly larger than the parent */
+    padding-left: 6%;   /* Adjust padding */
+    width: 113%; /* Adjust width to be slightly larger than the parent */
     position: relative; /* Make sure the icon is positioned relative to the container */
+    left: .6px;
   }
+
+  
   
   .login-input {
     flex: 1; /* Allow the input to take up the available space */
